syntax = "proto3";

message AlarmEvent {
  int64 id = 1;
  int32 alarm_id = 2;
  string alarm_description = 3;
  int64 timestamp = 4;
  // Additional alarm event fields can be added here
}
